[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/End.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_color = Color( 0.396078, 0.839216, 0.807843, 1 )
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 901.0
margin_bottom = 601.0
color = Color( 1, 0.913725, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congratulations" type="Label" parent="."]
margin_left = 52.9727
margin_top = 250.916
margin_right = 860.973
margin_bottom = 335.916
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.839216, 0.807843, 1 )
text = "¡Felicitaciones, acertaste!"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BadLuck" type="Label" parent="."]
margin_left = 22.2704
margin_top = 216.739
margin_right = 882.27
margin_bottom = 379.739
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Mejor suerte para la próxima"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MissedSome" type="Label" parent="."]
margin_left = 22.2704
margin_top = 216.739
margin_right = 882.27
margin_bottom = 379.739
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Marcaste una cantidad incorrecta de casillas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
